# soundbar

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: index.html  main.js  main.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs
src-tauri/src/app/: key_hook.rs  key_task.rs  mod.rs  soundbite.rs
src-tauri/src/app/commands/: mod.rs  utils.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/soundmanager/: key_hook.rs  key_task.rs  mod.rs  soundbite.rs  soundstate.rs  utils.rs
src/scss/: styles.scss
src/ts/: main.ts
