[package]
name = "soundbar"
version = "0.0.0"
description = "A Tauri App"
authors = ["amk319"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "processthreadsapi"] }

[dependencies]
tauri = { version = "1.3", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam = "0.8.2"
once_cell = "1.17.1"

anyhow = "1.0"
thiserror = "1.0"

rodio = "0.17.1"

directories = "5.0.0"

log = "0.4.17"
simple-logging = "2.0.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
